@@ -1,6 +1,60 @@
 module TZInfo
   # A period of time in a timezone where the same offset from UTC applies.
   class TimezonePeriod
+    
+    # A cache of pre-reduced Rationals for each half-hour between -12 and +12.
+    # This is used to save time when loading a TimezonePeriod.
+    @@rational_cache = {
+      -43200 => Rational.new!(-1,2),
+      -41400 => Rational.new!(-23,48),
+      -39600 => Rational.new!(-11,24),
+      -37800 => Rational.new!(-7,16),
+      -36000 => Rational.new!(-5,12),
+      -34200 => Rational.new!(-19,48),
+      -32400 => Rational.new!(-3,8),
+      -30600 => Rational.new!(-17,48),
+      -28800 => Rational.new!(-1,3),
+      -27000 => Rational.new!(-5,16),
+      -25200 => Rational.new!(-7,24),
+      -23400 => Rational.new!(-13,48),
+      -21600 => Rational.new!(-1,4),
+      -19800 => Rational.new!(-11,48),
+      -18000 => Rational.new!(-5,24),
+      -16200 => Rational.new!(-3,16),
+      -14400 => Rational.new!(-1,6),
+      -12600 => Rational.new!(-7,48),
+      -10800 => Rational.new!(-1,8),
+      -9000 =>  Rational.new!(-5,48),
+      -7200 =>  Rational.new!(-1,12),
+      -5400 =>  Rational.new!(-1,16),
+      -3600 =>  Rational.new!(-1,24),
+      -1800 =>  Rational.new!(-1,48),
+      0 =>      Rational.new!(0,1),
+      1800 =>   Rational.new!(1,48),
+      3600 =>   Rational.new!(1,24),
+      5400 =>   Rational.new!(1,16),
+      7200 =>   Rational.new!(1,12),
+      9000 =>   Rational.new!(5,48),
+      10800 =>  Rational.new!(1,8),
+      12600 =>  Rational.new!(7,48),
+      14400 =>  Rational.new!(1,6),
+      16200 =>  Rational.new!(3,16),
+      18000 =>  Rational.new!(5,24),
+      19800 =>  Rational.new!(11,48),
+      21600 =>  Rational.new!(1,4),
+      23400 =>  Rational.new!(13,48),
+      25200 =>  Rational.new!(7,24),
+      27000 =>  Rational.new!(5,16),
+      28800 =>  Rational.new!(1,3),
+      30600 =>  Rational.new!(17,48),
+      32400 =>  Rational.new!(3,8),
+      34200 =>  Rational.new!(19,48),
+      36000 =>  Rational.new!(5,12),
+      37800 =>  Rational.new!(7,16),
+      39600 =>  Rational.new!(11,24),
+      41400 =>  Rational.new!(23,48),
+      43200 =>  Rational.new!(1,2)}
+    
     # Start time of the period (UTC). May be nil if unbounded.
     attr_reader :utc_start
     
@@ -32,7 +86,10 @@ module TZInfo
       @utc_end = utc_end
       @utc_offset = utc_offset
       @std_offset = std_offset
-      @zone_identifier = zone_identifier            
+      @zone_identifier = zone_identifier
+      @utc_total_offset = utc_offset + std_offset
+      @utc_total_offset_rational = @@rational_cache[utc_total_offset]
+      @utc_total_offset_rational = Rational(utc_total_offset, 86400) if @utc_total_offset_rational.nil?
       
       @local_start = utc_start.nil? ? nil : to_local(utc_start)
       @local_end = utc_end.nil? ? nil : to_local(utc_end)             
@@ -40,12 +97,12 @@ module TZInfo
     
     # Total offset from UTC (seconds). Equal to utc_offset + std_offset.
     def utc_total_offset
-      utc_offset + std_offset
+      @utc_total_offset
     end
     
     # Total offset from UTC (days). Result is a Rational.
     def utc_total_offset_rational
-      Rational(utc_total_offset, 86400)
+      @utc_total_offset_rational
     end
     
     # true if daylight savings is in effect for this period; otherwise false.
